# cmake-class

./: cmake.md
CPack_mymath_shared/: CMakeLists.txt
CPack_mymath_shared/app/: CMakeLists.txt
CPack_mymath_shared/my_lib/: CMakeLists.txt
CTest_myMath/: CMakeLists.txt  main.cpp
cmake_language/: CMakeLists.txt
cmake_protoc/: CMakeLists.txt  main.cpp
cmake_protoc/proto/: person.proto
find_jsoncpp_config/: CMakeLists.txt  main.cpp
hello_world/: CMakeLists.txt  test.cpp
install_shared_mymath/my_lib/: CMakeLists.txt  Config.cmake.in
install_static_mymath/: CMakeLists.txt
install_static_mymath/my_lib/: CMakeLists.txt
interface_link_demo/A/: CMakeLists.txt  libA.cpp
interface_link_demo/B/: CMakeLists.txt
my_math/app/: CMakeLists.txt  main.cpp
pkg_config_json/: CMakeLists.txt  main.cpp
test_MyMath/: CMakeLists.txt  main.cpp
test_add_sub_dir/: CMakeLists.txt
test_add_sub_dir/sub/: CMakeLists.txt
test_base_exp/: CMakeLists.txt
test_catch_scop/: CMakeLists.txt
test_dir_scop/: CMakeLists.txt
test_dir_scop/src/: CMakeLists.txt
test_env_scop/: CMakeLists.txt
test_foreach/: CMakeLists.txt
test_func/: CMakeLists.txt
test_func_scop/: CMakeLists.txt
test_include/: CMakeLists.txt
test_include/sub/: sub.cmake
test_list/: CMakeLists.txt
test_set_target_properties/: CMakeLists.txt
test_set_target_properties/src/: CMakeLists.txt
test_static_build_dir/: CMakeLists.txt
test_static_build_dir/app/: CMakeLists.txt
test_static_build_dir/my_lib/: CMakeLists.txt
test_static_build_dir/my_lib/src/: add.cpp  sub.cpp
test_target_link_libraries/: CMakeLists.txt
test_target_link_libraries/src/: CMakeLists.txt  add.cpp
